--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,7 @@ config.cfg
 # Ignore various Linux vpc products
 compile_commands.json
 *.project
+
+# Don't ignore base makefiles
+!makefile_base_posix.mak
+!sourcesdk_def.mak
